<resources>
    <string name="app_name">Cleaner Planner</string>

    <!-- Login Main Activity Strings -->
    <string name="loginMainActivityStringLoginText">Continue with login:</string>
    <string name="loginMainActivityStringLoginGmail">Continue with Gmail login</string>
    <string name="loginMainActivityStringCreted">Created by Dante</string>

    <!-- Menu Top Navigation Strings -->
    <string name="searchStringTextTopMenuIcon">Search</string>
    <string name="calendarStringTextTopMenuIcon">Calendar</string>
    <string name="deleteStringTextTopMenuIcon">Delete</string>

    <!-- Menu Bottom Navigation Strings -->
    <string name="worksheetsStringTextBottomMenuIcon">Worksheets</string>
    <string name="historyStringTextBottomMenuIcon">History</string>
    <string name="paymentsStringTextBottomMenuIcon">Payments</string>
    <string name="clientsStringTextBottomMenuIcon">Clients</string>
    <string name="settingsStringTextBottomMenuIcon">Settings</string>

    <!-- Login Gmail Activity Strings -->
    <string name="loginGmailActivityStringWaitOnConnection">Connecting…</string>

    <!-- Worksheets Done Activity Strings -->
    <string name="worksheetsDoneActivityStringJobDoneTextView">Job Done</string>
    <string name="worksheetsDoneActivityStringBalanceTextView">Balance</string>
    <string name="worksheetsDoneActivityStringChargedTextView">Charged</string>
    <string name="worksheetsDoneActivityStringPaidTextView">Paid</string>
    <string name="worksheetsDoneActivityStringMethodTextView">Method</string>
    <string name="worksheetsDoneActivityStringCancelButton">Cancel</string>
    <string name="worksheetsDoneActivityStringSubmitButton">Submit</string>

    <string-array name="worksheetsDoneActivityStringMethodSpinner">

        <item>Cash</item>
        <item>Checque</item>
        <item>Envelope</item>

    </string-array>

    <!-- Worksheets Missed Activity Strings -->
    <string name="worksheetsDoneActivityStringJobMissedTextView">Job Missed</string>
    <string name="worksheetsMissedActivityStringReasonTextView">Reason: </string>
    <string name="worksheetsMissedActivityStringReasonAutoCompleteTextView">Reason</string>


    <!-- History Fragment Strings -->
    <string name="historyFragmentStringAllTabItem">All</string>
    <string name="historyFragmentStringDoneTabItem">DONE</string>
    <string name="historyFragmentStringMissedTabItem">MISSED</string>

    <!-- Clients Activity Add Strings -->
    <string name="clientsActivityAddStringNameHintEditText">Name</string>
    <string name="clientsActivityAddStringAddressHintEditText">Address, Town, PostCode</string>
    <string name="clientsActivityAddStringPhoneHintEditText">Phone Number</string>
    <string name="clientsActivityAddStringEmailHintEditText">Email Address</string>
    <string name="clientsActivityAddStringPaymentHintEditText">Price</string>
    <string name="clientsActivityAddStringRepeatHintEditText">Weekly</string>
    <string name="clientsActivityAddStringWorkHintEditText">First clean date</string>
    <string name="clientsActivityAddStringDescriptionTextView">Note: </string>
    <string name="clientsActivityAddStringDescriptionHintCompleteTextView">Note</string>

    <string name="clientsActivityAddStringCancelButton">Cancel</string>
    <string name="clientsActivityAddStringDeleteButton">Delete</string>
    <string name="clientsActivityAddStringSubmitButton">Submit</string>

    <!-- Payments Activity List Item Strings -->
    <string name="paymentsActivityListItemStringNameTextView">Name: </string>
    <string name="paymentsActivityListItemStringAddressTextView">Address: </string>
    <string name="paymentsActivityListItemStringChargedTextView">Charged: </string>
    <string name="paymentsActivityListItemStringBalanceTextView">Balance: </string>
    <string name="paymentsActivityListItemStringTotalTextView">Total: </string>

    <string name="paymentsActivityListItemStringNameHintTextView">Name</string>
    <string name="paymentsActivityListItemStringAddressHintTextView">Address</string>
    <string name="paymentsActivityListItemStringChargedHintTextView">Charged</string>
    <string name="paymentsActivityListItemStringBalanceHintTextView">Balance</string>
    <string name="paymentsActivityListItemStringTotalHintTextView">Total</string>

    <string name="paymentsActivityListItemStringCancelButton">Cancel</string>
    <string name="paymentsActivityListItemAddButton">Add Payment</string>
    <string name="paymentsActivityListItemSubmitButton">Submit</string>

    <!-- Payment Activity Add Strings -->
    <string name="paymentActivityAddStringPaymentTextView">Add Payment</string>
    <string name="paymentActivityAddStringPaidTextView">Paid: </string>
    <string name="paymentActivityAddStringCancelButton">Cancel</string>
    <string name="paymentActivityAddStringSubmitButton">Submit</string>

    <!-- Settings Fragment Strings -->
    <string name="settingsFragmentStringUserNameTextView">Name:</string>
    <string name="settingsFragmentStringUserEmailTextView">Email:</string>
    <string name="settingsFragmentStringSignOutButton">Sign Out</string>

    <!-- Clients Adapter Strings -->
    <string name="clientsAdapterStringNameTextView">Name:</string>
    <string name="clientsAdapterStringAddressTextView">Address:</string>
    <string name="clientsAdapterStringPhoneTextView">Phone:</string>
    <string name="clientsAdapterStringEmailTextView">Email:</string>
    <string name="clientsAdapterStringDateTextView">Date:</string>
    <string name="clientsAdapterStringChargedTextView">Charged:</string>
    <string name="clientsAdapterStringRepeatTextView">Repeat:</string>
    <string name="clientsAdapterStringDescriptionTextView">Description:</string>

    <!-- History Adapter Strings -->
    <string name="historyAdapterStringNameTextView">Name:</string>
    <string name="historyAdapterStringChargedTextView">Charged:</string>
    <string name="historyAdapterStringPaidTextView">Paid:</string>
    <string name="historyAdapterStringMethodTextView">Method:</string>
    <string name="historyAdapterStringReasonTextView">Reason:</string>
    <string name="historyAdapterStringDateTextView">Date:</string>

    <!-- Payments Adapter Strings -->
    <string name="paymentsAdapterStringNameTextView">Name:</string>
    <string name="paymentsAdapterStringAddressTextView">Address:</string>
    <string name="paymentsAdapterStringChargedTextView">Charged:</string>
    <string name="paymentsAdapterStringBalanceTextView">Balance:</string>
    <string name="paymentsAdapterStringTotalTextView">Total:</string>

</resources>
