<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_top_navidation_delete_icon"
        android:icon="@drawable/menu_top_navidation_delete_icon"
        app:showAsAction="never"
        android:title="@string/deleteStringTextTopMenuIcon" />

    <item
        android:id="@+id/menu_top_navidation_calendar_icon"
        android:icon="@drawable/menu_top_navigation_calendar_icon"
        app:showAsAction="ifRoom"
        app:iconTint="@android:color/white"
        android:title="@string/calendarStringTextTopMenuIcon" />

    <item
        android:id="@+id/menu_top_navidation_search_icon"
        android:icon="@drawable/menu_top_navigation_search_icon"
        android:title="@string/searchStringTextTopMenuIcon"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

</menu>