<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ClientsFragment">

    <LinearLayout
        android:id="@+id/history_fragment_table_layout_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/fragment_history_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabIndicatorColor="@color/buttonShapeBackgroundStartColor"
            app:tabTextColor="@color/colorPrimaryDark">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyFragmentStringAllTabItem" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyFragmentStringDoneTabItem" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyFragmentStringMissedTabItem" />

        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/history_fragment_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/history_fragment_table_layout_linear_layout" />

</RelativeLayout>