<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_border_activity"
    tools:context=".activities.WorksheetsDoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/paymentActivityAddStringPaymentTextView"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/paymentActivityAddStringPaidTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u00A3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/activity_payment_add_paid_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_payment_add_cancel_button"
                style="@style/shapeButtonBackground"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_marginEnd="10sp"
                android:layout_weight="1"
                android:text="@string/paymentActivityAddStringCancelButton" />

            <Button
                android:id="@+id/activity_payment_add_submit_button"
                style="@style/shapeButtonBackground"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_marginEnd="10sp"
                android:layout_weight="1"
                android:text="@string/paymentActivityAddStringSubmitButton" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>