<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_app_background">

    <LinearLayout
        android:id="@+id/activity_login_main_logo_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <ImageView
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:src="@mipmap/cleaner_planner_logo"
            android:layout_marginTop="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="italic"
            android:textColor="@color/logoTextColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/activity_login_main_logo_linear_layout"
        android:layout_above="@id/activity_login_main_create_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:layout_marginBottom="20sp"
            android:text="@string/loginMainActivityStringLoginText"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/appTextColor" />

        <Button
            android:id="@+id/login_main_activity_gmail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:text="@string/loginMainActivityStringLoginGmail"
            android:drawableStart="@drawable/googleg_standard_color_18"
            style="@style/shapeButtonBackground" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/activity_login_main_create_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginMainActivityStringCreted"
            android:textAlignment="textStart"
            android:textColor="@color/appTextColor"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>