<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:id="@+id/fragment_settings_user_info_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_bottom_border_user_info_settings">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@mipmap/settings_fragment_user_info_icon"
            android:layout_marginBottom="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsFragmentStringUserNameTextView"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_settings_user_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsFragmentStringUserEmailTextView"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_settings_user_email_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="10sp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/fragment_settings_sign_out_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsFragmentStringSignOutButton"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_user_settings_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/fragment_settings_user_info_linear_layout"
        android:layout_margin="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Default SMS text: "/>

        <MultiAutoCompleteTextView
            android:id="@+id/fragment_settings_defaul_sms_complete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Defaul sms text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Default Email text: "/>


        <EditText
            android:id="@+id/fragment_settings_defaul_email_subject_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Subject" />

        <MultiAutoCompleteTextView
            android:id="@+id/fragment_settings_defaul_email_complete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Defaul Email text" />

        <Button
            android:id="@+id/fragment_settings_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />


    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginMainActivityStringCreted"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp" />

</RelativeLayout>